home page is responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,11 @@
 @tailwind utilities;
 
 
+@media (min-height: 720px) {
+.grid-container{
+    display: grid;
+    row-gap: 20px;
+    padding-bottom: 2vh;
+}
+
+}
